--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Artwork.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Artwork.cshtml
@@ -17,11 +17,9 @@
                 <a href="index.html">Home</a>
             </li>
             <li>
-                <a href="#0">Pages</a>
+                <a href="#0">Artwork for Sale</a>
             </li>
-            <li>
-                <span>Vehicles</span>
-            </li>
+
         </ul>
     </div>
     <div class="bg_img hero-bg bottom_center" data-background='@Url.Content("~/assetsIndex/images/banner/hero-bg.png")'></div>
