--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/ArtworkDetail.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/ArtworkDetail.cshtml
@@ -31,13 +31,13 @@
     <div class="container">
         <ul class="breadcrumb">
             <li>
-                <a href="index.html">Home</a>
+                <a href="/index/home">Home</a>
             </li>
             <li>
-                <a href="#0">Gallery</a>
+                <a href="/Index/gallery">Gallery</a>
             </li>
             <li>
-                <span>Artwork</span>
+                <span>Artwork detail</span>
             </li>
         </ul>
     </div>
