--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/AuctionDetail.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/AuctionDetail.cshtml
@@ -65,10 +65,10 @@
     <div class="container">
         <ul class="breadcrumb">
             <li>
-                <a href="index.html">Home</a>
+                <a href="/index/home">Home</a>
             </li>
             <li>
-                <a href="#0">Auction</a>
+                <a href="/index/auction">Auction</a>
             </li>
             <li>
                 <span>Auction Detail</span>
