--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Auction.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/Index/Auction.cshtml
@@ -5,7 +5,7 @@
     {
         ListAuction = ViewBag.ListAuction;
     }
-
+    DateTime now = DateTime.Now;
 }
 <div class="hero-section style-2">
     <div class="container">
@@ -72,6 +72,20 @@
                     CurrentBid = item.ReservePrice;
                 }
 
+                string status = "";
+                @if (DateTime.Compare(item.BeginDay, now) > 0)
+                {
+                    status = "Comming soon";
+                }
+                else if (DateTime.Compare(item.EndDay, now) <= 0)
+                {
+                    status = "Expired";
+                }
+                else
+                {
+                    status = "End day: " + item.EndDay.ToString("dd/MM/yyyy");
+                }
+
                 <div class="col-sm-10 col-md-6 col-lg-4">
                     <div class="auction-item-2">
                         <div class="auction-thumb">
@@ -105,7 +119,7 @@
                             </div>
                             <div class="countdown-area">
                                 <div class="countdown">
-                                    <div id="bid_counter1"></div>
+                                    <span>@status</span>
                                 </div>
                                 <span class="total-bids">@BidCount Bids</span>
                             </div>
