--- a/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
+++ b/eProject/OnlineArtGallery/OnlineArtGallery/Views/UserLayout/ScriptPartial.cshtml
@@ -63,10 +63,10 @@
             element(totalPages, 1, ulTag, numberArtInPage);
         }
 
-        if (document.getElementById("BuyNow") != null) {
-            var btnAddToCard = document.getElementById("BuyNow").getElementsByTagName("a")[0];
-            btnAddToCard.addEventListener("click", AddToCardCliked);
-        }
+        //if (document.getElementById("BuyNow") != null) {
+        //    var btnAddToCard = document.getElementById("BuyNow").getElementsByTagName("a")[0];
+        //    btnAddToCard.addEventListener("click", AddToCardCliked);
+        //}
 
 
         if (document.getElementById("MenuMethod") != null) {
